see Bugs: 279132: [Design] Design disregards main menu items' disability and visibility 278239: [design] Provide visual feedback when mouse is over views close button 279031: [design] Unable to close last view in part stack

--- a/bundles/org.eclipse.rap.design.example/theme/business/business.css
+++ b/bundles/org.eclipse.rap.design.example/theme/business/business.css
@@ -38,6 +38,28 @@ Button.clearButton {
   padding: 2px;
 }
 
+Button.viewClose {
+  background-color: transparent;
+  background-image: url( /img/business/stack_tab_active_close_active.png );
+  border: none;
+  padding: 2px;
+}
+
+Button.viewClose:hover {
+  background-image: url( /img/business/stack_tab_active_close_active_hover.png );
+}
+
+Button.viewCloseInactive {
+  background-color: transparent;
+  background-image: url( /img/business/stack_tab_inactive_close_active.png );
+  border: none;
+  padding: 2px;
+}
+
+Button.viewCloseInactive:hover {
+  background-image: url( /img/business/stack_tab_inactive_close_active_hover.png );
+}
+
 Button.toolbarOverflowInactive {
   background-color: transparent;
   background-image: url( /img/business/toolbar_overflow.png );
